opam-version: "2.0"
synopsis: "a json parsing tool"
version: "1.5"
maintainer: "ted.m.paulsen@gmail.com"
authors: ["Ted Paulsen"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" { >= "2.0.0" }
  "core" { = "v0.12.4" }
  "ocamlformat" { = "0.12" }
  "ppx_tools_versioned" { = "5.3.0" }
  "ppx_jane"{ = "v0.12.0" }
  "menhir"{ = "20190924" }
  "fmt" { = "0.8.8" }
]